feat: add product API endpoint to get products by ids - POST /v1/product/bulk
