# api/v1/product/routes.py
@@ -1,6 +1,6 @@
 from flask import Flask, Blueprint, jsonify, request
 
-from api.v1.product.controller import findAllProduct, findProductById, insertProduct, removeProduct, updateProduct
+from api.v1.product.controller import findAllProduct, findProductById, findProductsByIds, insertProduct, removeProduct, updateProduct
 
 productRoutes = Blueprint('ProductRoutes', __name__, url_prefix='/v1/product')
 
@@ -12,6 +12,11 @@ def getAllProduct():
 @productRoutes.route('/<productId>', methods=['GET'])
 def getProductById(productId:str):
     data, status = findProductById(productId)
+    return jsonify(data), status
+
+@productRoutes.route('/bulk', methods=['POST'])
+def getProductsByIds():
+    data, status = findProductsByIds(request.json)
     return jsonify(data), status
 
 @productRoutes.route('', methods=['POST'])
