# api/v1/swagger.json
@@ -694,6 +694,34 @@
         }
       }
     },
+    "/product/bulk": {
+      "post": {
+        "tags": ["Product"],
+        "description": "Get Products by Ids",
+        "summary": "Get Products by Ids",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProductIdsInput"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/200"
+          },
+          "422": {
+            "$ref": "#/components/responses/422"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/request": {
       "get": {
         "tags": ["Request"],
@@ -1179,6 +1207,13 @@
             "example": "672b8b35eb845da3a5bdec1e"
           }
         }
+      },
+      "ProductIdsInput": {
+        "type": "array",
+        "items": {
+          "type": "string"
+        },
+        "example": ["670d090ed7758c7c0b8dfc7f", "672e299a0aa95320d37b2e3a"]
       },
       "RequestInput": {
         "type": "object",
